Cambio de imagen del drone

--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -2,7 +2,7 @@
 {% extends 'core/base.html' %}
 {% block title %}About {% endblock %}
  
-{% block background %}{% load static %}{% static 'core/img/Drone.jpg' %}{% endblock %}
+{% block background %}{% load static %}{% static 'core/img/drone.jpg' %}{% endblock %}
 
 {% block headers %} 
     <h1>About</h1>
